Add image functionality
